--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "express": "3.x",
-    "i18n-abide": "~0.0.8"
+    "i18n-abide": "~0.0.8",
+    "ejs": "0.8.x"
   },
   "devDependencies": {
     "mocha": "1.9.x"
