--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "express": "3.x",
     "i18n-abide": "~0.0.8",
-    "ejs": "0.8.x"
+    "ejs": "0.8.x",
+    "openid": "0.5.x"
   },
   "devDependencies": {
     "mocha": "1.9.x"
