--- a/.jshintrc
+++ b/.jshintrc
@@ -1,25 +1,27 @@
 {
   "bitwise": false,
+  "boss": true,
+  "browser": true,
   "camelcase": true,
-  "curly": true,
-  "eqeqeq": true,
-  "forin": true,
-  "immed": true,
-  "indent": 2,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "noempty": true,
-  "nonew": true,
-  "plusplus": true,
-  "quotmark": true,
-  "undef": true,
-  "unused": "strict",
-  "trailing": true,
-  "maxcomplexity": 10,
-  "maxlen": 80,
   "es5": true,
   "esnext": true,
+  "eqeqeq": true,
+  "eqnull": true,
+  "expr": true,
+  "forin": false,
+  "indent": 2,
+  "laxbreak": true,
+  "laxcomma": true,
+  "maxcomplexity": 10,
+  "maxlen": 80,
+  "maxerr": 100,
   "node": true,
-  "white": true
+  "noarg": true,
+  "passfail": false,
+  "shadow": false,
+  "strict": false
+  "supernew": false,
+  "undef": true,
+  "unused": true,
+  "white": true,
 }
