--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "3.x",
     "i18n-abide": "~0.0.8",
     "ejs": "0.8.x",
-    "openid": "0.5.x"
+    "openid": "0.5.x",
+    "convict": "~0.2.3"
   },
   "devDependencies": {
     "mocha": "1.9.x"
