Add awsbox dependency and basic .awsbox.json file

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openid": "0.5.x"
   },
   "devDependencies": {
+    "awsbox": "0.4.x",
     "jshint": "~2.1.2",
     "mocha": "1.9.x",
     "walk": "~2.2.1"
