updates from review

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,7 @@
   "boss": true,
   "browser": true,
   "camelcase": true,
+  "curly": true,
   "es5": true,
   "esnext": true,
   "eqeqeq": true,
@@ -10,6 +11,7 @@
   "expr": true,
   "forin": false,
   "indent": 2,
+  "latedef": true,
   "laxbreak": true,
   "laxcomma": true,
   "maxcomplexity": 10,
@@ -18,9 +20,10 @@
   "node": true,
   "noarg": true,
   "passfail": false,
-  "shadow": false,
+  "shadow": true,
   "strict": false
   "supernew": false,
+  "trailing": true,
   "undef": true,
   "unused": true,
   "white": true,
