--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "mocha --check-leaks --recursive ./test/"
   },
   "dependencies": {
+    "client-sessions": "~0.3.0",
     "convict": "~0.2.3",
     "ejs": "0.8.x",
     "express": "3.x",
