--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "i18n-abide": "~0.0.8",
     "jwcrypto": "~0.4.3",
     "node-statsd": "0.0.7",
-    "openid": "0.5.x"
+    "openid": "0.5.x",
+    "winston": "0.7.x"
   },
   "devDependencies": {
     "awsbox": "0.4.x",
