--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
   "author": "Dan Callahan <dan.callahan@gmail.com>",
   "license": "MPL 2.0",
   "scripts": {
+    "preinstall": "node ./scripts/lockdown.js",
     "start":  "node ./server.js --issuer=gmail.com",
     "test": "mocha --check-leaks --recursive ./test/"
   },
   "dependencies": {
-    "client-sessions": "~0.3.0",
-    "convict": "~0.3.2",
-    "ejs": "0.8.x",
-    "express": "3.x",
-    "i18n-abide": "~0.0.8",
-    "jwcrypto": "~0.4.3",
+    "client-sessions": "0.3.1",
+    "convict": "0.3.2",
+    "ejs": "0.8.4",
+    "express": "3.2.6",
+    "i18n-abide": "0.0.8beta7",
+    "jwcrypto": "0.4.3",
+    "lockdown": "0.0.4",
     "node-statsd": "0.0.7",
-    "openid": "0.5.x",
-    "winston": "0.7.x"
+    "openid": "0.5.2",
+    "winston": "0.7.1"
   },
   "devDependencies": {
-    "awsbox": "0.4.x",
-    "jshint": "~2.1.2",
-    "mocha": "1.9.x",
-    "walk": "~2.2.1"
+    "awsbox": "0.4.5",
+    "jshint": "2.1.3",
+    "mocha": "1.10.0",
+    "walk": "2.2.1"
   }
 }
