--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "type": "git",
     "url": "https://github.com/callahad/sideshow"
   },
-  "author": "Dan Callahan <dan.callahan@gmail.com>",
+  "author": "Dan Callahan <dan.callahan@gmail.com> (http://dancallahan.info)",
+  "contributors": [
+    "Sean McArthur <sean.monstar@gmail.com> (http://seanmonstar.com)"
+  ],
   "license": "MPL 2.0",
   "scripts": {
     "preinstall": "node ./scripts/lockdown.js",
