--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "client-sessions": "0.3.1",
+    "connect-fonts": "0.0.9",
+    "connect-fonts-opensans": "0.0.4",
     "convict": "0.3.2",
     "ejs": "0.8.4",
     "express": "3.2.6",
