include node_modules, npm install --production

--- a/scripts/sideshow.spec.template
+++ b/scripts/sideshow.spec.template
@@ -22,14 +22,14 @@ sideshow: BrowserID Bridging to Google.
 %setup -q -c
 
 %build
-npm install
+npm install --production
 export PATH=$PWD/node_modules/.bin:$PATH
 echo "$GIT_REVISION" > static/ver.txt
 
 %install
 rm -rf %{buildroot}
 mkdir -p %{buildroot}%{_rootdir}
-for f in bin lib static views; do
+for f in bin lib node_modules static views; do
     cp -rp $f %{buildroot}%{_rootdir}/
 done
 
