--- a/scripts/sideshow.spec.template
+++ b/scripts/sideshow.spec.template
@@ -11,8 +11,8 @@ License:       MPL 2.0
 URL:           https://github.com/callahad/sideshow
 BuildRoot:     %{_tmppath}/%{name}-%{version}-%{release}-root
 AutoReqProv:   no
-Requires:      openssl, nodejs >= 0.8.17
-BuildRequires: gcc-c++, gmp-devel, make, nodejs >= 0.8.17
+Requires:      openssl, nodejs = 0.8.24
+BuildRequires: gcc-c++, gmp-devel, make, nodejs = 0.8.24
 Source:        sideshow-%{version}.tar.gz
 
 %description
