--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "preinstall": "node ./scripts/lockdown.js",
     "start": "node ./bin/sideshow.js --issuer=gmail.com",
-    "test": "mocha --check-leaks --globals sPaddedMessageHex"
+    "test": "mocha --check-leaks"
   },
   "dependencies": {
     "client-sessions": "0.3.1",
@@ -25,7 +25,7 @@
     "ejs": "0.8.4",
     "express": "3.2.6",
     "i18n-abide": "0.0.8beta7",
-    "jwcrypto": "0.4.3",
+    "jwcrypto": "0.4.4",
     "lockdown": "0.0.4",
     "node-statsd": "0.0.7",
     "openid": "0.5.2",
