--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An experiment in building a minimal Gmail ProxyIDP",
   "repository": {
     "type": "git",
-    "url": "https://github.com/callahad/sideshow"
+    "url": "https://github.com/mozilla/browserid-sideshow"
   },
   "author": "Dan Callahan <dan.callahan@gmail.com> (http://dancallahan.info)",
   "contributors": [
@@ -24,9 +24,9 @@
     "convict": "0.3.2",
     "ejs": "0.8.4",
     "express": "3.2.6",
-    "i18n-abide": "0.0.8beta9",
+    "i18n-abide": "0.0.13",
     "jwcrypto": "0.4.4",
-    "lockdown": "0.0.4",
+    "lockdown": "0.0.5",
     "node-statsd": "0.0.7",
     "openid": "0.5.2",
     "winston": "0.7.1",
