--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "author": "Dan Callahan <dan.callahan@gmail.com> (http://dancallahan.info)",
   "contributors": [
-    "Sean McArthur <sean.monstar@gmail.com> (http://seanmonstar.com)"
+    "Sean McArthur <sean.monstar@gmail.com> (http://seanmonstar.com)",
+    "Shane Tomlinson <stomlinson@mozilla.com> (https://shanetomlinson.com)"
   ],
   "license": "MPL 2.0",
   "scripts": {
@@ -28,7 +29,7 @@
     "jwcrypto": "0.4.4",
     "lockdown": "0.0.5",
     "node-statsd": "0.0.7",
-    "openid": "0.5.2",
+    "googleapis": "0.4.3",
     "winston": "0.7.1",
     "validator": "1.2.0"
   },
