--- a/package.json
+++ b/package.json
@@ -13,30 +13,33 @@
   ],
   "license": "MPL 2.0",
   "scripts": {
-    "preinstall": "node ./scripts/lockdown.js",
+    "preinstall": "lockdown",
     "start": "node ./bin/sideshow.js --issuer=gmail.com",
     "test": "mocha --check-leaks"
   },
   "dependencies": {
-    "client-sessions": "0.3.1",
-    "connect-fonts": "0.0.9",
-    "connect-fonts-opensans": "0.0.4",
+    "client-sessions": "0.7.0",
+    "connect-fonts": "2.0.2",
+    "connect-fonts-opensans": "0.0.5",
     "convict": "0.3.2",
-    "ejs": "0.8.4",
-    "express": "3.2.6",
+    "ejs": "1.0.0",
+    "express": "3.18.4",
     "i18n-abide": "0.0.8",
     "jwcrypto": "0.4.4",
-    "lockdown": "0.0.4",
-    "node-statsd": "0.0.7",
-    "openid": "0.5.2",
-    "winston": "0.7.1",
-    "validator": "1.2.0"
+    "lockdown": "0.0.6",
+    "node-statsd": "0.1.0",
+    "openid": "0.5.9",
+    "validator": "1.2.0",
+    "winston": "0.7.1"
   },
   "devDependencies": {
-    "awsbox": "0.4.5",
-    "jshint": "2.1.3",
-    "mocha": "1.10.0",
+    "awsbox": "0.7.0",
+    "jshint": "2.5.10",
+    "mocha": "2.0.1",
     "request": "2.21.0",
     "walkdir": "0.0.7"
+  },
+  "engines": {
+    "node": ">= 0.10.33"
   }
 }
